--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
         <img src="images/logo.png" class="logo">
         <nav>
             <ul>
-                <li data-id="home-section" class="active-nav-li">HOME</li>
-                <li data-id="about-us-section">ABOUT US</li>
-                <li data-id="pricing-section">PRICING</li>
-                <li data-id="contact-us-section">CONTACT US</li>
+                <li><a href="#" data-id="home-section" class="nav-li active-nav-li">HOME</a></li>
+                <li><a href="#" data-id="about-us-section" class="nav-li">ABOUT US</a></li>
+                <li><a href="#" data-id="pricing-section" class="nav-li">PRICING</a></li>
+                <li><a href="#" data-id="contact-us-section" class="nav-li">CONTACT US</a></li>
             </ul>
         </nav>
     </header>
 
-    <section class="home-section">
+    <section class="sections active" id="home-section">
         <div class="main">
             <div class="main-left">
                 <h1>Immediate Solutions<br> for Your <span>Business!</span></h1>
@@ -86,11 +86,36 @@
     </section>
 
 
-    <section class="about-us-section"></section>
+    <section class="sections active" id="about-us-section">
+        <div>
+            <h1>hello</h1>
+        </div>
+        <div>
+            <h2>bye</h2>
+        </div>
+    </section>
 
 
+    <section class="sections active" id="pricing-section">
+        <div>
+            <h1>hello</h1>
+        </div>
+        <div>
+            <h2>bye</h2>
+        </div>
+    </section>
 
-    <div class="invisible-div"></div>
+    <section class="sections active" id="contact-us-section">
+        <div>
+            <h1>hello</h1>
+        </div>
+        <div>
+            <h2>bye</h2>
+        </div>
+    </section>
+
+
+    <!--<div class="invisible-div"></div>-->
     <script src="app.js"></script>
 </body>
 </html>
