--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
         </nav>
     </header>
 
+
+    <!--HOME SECTION--------------------------------->
     <section class="sections active" id="home-section">
         <div class="main">
             <div class="main-left">
@@ -86,14 +88,146 @@
     </section>
 
 
-    <section class="sections active" id="about-us-section">
-        <div>
-            <h1>hello</h1>
+    <!--ABOUT US SECTION----------------------------->
+    <section class="sections" id="about-us-section">
+        <div class="about-us-div">
+            <div class="about-us-div-left">
+                <div class="about-us-div-left-img"></div>
+            </div>
+
+            <div class="about-us-div-right">
+                <h3>About Us</h3>
+                <i><h4>Pede non te nec at adversitas proposuimus per parum altero.</h4></i>
+                
+                <p>Nec fames mi. Eros nominis accesserunt ea ea habeat. Eu nibh dis atque alias utergue donec. Recusandae circumcirca proin arcades crudele. Cum floret sint. Generoso custos celeritas. Me qui at certus animi mirabilia recesserunt et fugit. Sed et restigia laborandum clari rationibus habent animi qui suspncta. Eaque at maxime imbelles incarcerata zzril interregnum hac eodem. Ea proponendis cum wisi qui id in ad minim.</p>
+
+                <p>Magna class arcui tot quia, emolumentum patiebatur tibi, eos ea maneant castra intaminata mi operis at domine augue option.
+                </p>
+            </div>
         </div>
-        <div>
-            <h2>bye</h2>
+
+        <div class="services">
+            <h3>Services</h3>
+            <p>Eundrm tertio mercenarius te hac, ad patriam malaciam rem. Se est consortio subsecutum periculosissime.</p>
+
+            <div class="services-grid">
+                <div class="services-grid-panel-1">
+                    <img src="images/services-grid-img-1.png">
+                    <h6>Purus Assum</h6>
+                    <p>Crudelitas malitiae sequi consulta cras pectora te nunc ditescant principes typi prophetia instantias</p>
+                </div>
+
+                <div class="services-grid-panel-2">
+                    <img src="images/services-grid-img-2.png">
+                    <h6>Fusce Mentis</h6>
+                    <p>Ullam montes, orci encomia aut malevolentia hostico negotio ullo id occidit ad eu murrnur excindere risus</p>
+                </div>
+
+                <div class="services-grid-panel-3">
+                    <img src="images/services-grid-img-3.png">
+                    <h6>Nam in perspiciatis</h6>
+                    <p>Eius diam sequi facer id praetensionem te aequitate nihil pede tyriis omnium ab fugiat etiam tyrannis</p>
+                </div>
+
+                <div class="services-grid-panel-4">
+                    <img src="images/services-grid-img-4.png">
+                    <h6>Quas Sunt</h6>
+                    <p>Monoculus nisi odoratus dicterium sem fortunae, quia si risus vel iudicit optandum taciti ante et est protunc</p>
+                </div>
+
+                <div class="services-grid-panel-5">
+                    <img src="images/services-grid-img-5.png">
+                    <h6>Arcui Nostrum</h6>
+                    <p>Id unde eos id quocumque at nulla eius conformiter valorem est vigilantia denuntiando electionem virtutis</p>
+                </div>
+
+                <div class="services-grid-panel-6">
+                    <img src="images/services-grid-img-6.png">
+                    <h6>Facunda Parcam</h6>
+                    <p>Te rerum populo assum incidit dui in oleantem militantes. Nec fabula protunc, cum fronte ipsum dis minister</p>
+                </div>
+            </div>
         </div>
+
+        <div class="our-team">
+            <h3>Our Team</h3>
+            
+            <div class="our-team-container">
+                <div class="our-team-img-1">
+                    <div class="our-team-img-bottom">
+                        <h6>Joe Riley</h6>
+                        <p>CTO</p>
+                        <img src="images/twitter-logo.png">
+                    </div>
+                </div>
+
+                <div class="our-team-img-2">
+                    <div class="our-team-img-bottom">
+                        <h6>Vanessa Hodson</h6>
+                        <p>Product Manager</p>
+                        <img src="images/twitter-logo.png">
+                    </div>
+                </div>
+
+                <div class="our-team-img-3">
+                    <div class="our-team-img-bottom">
+                        <h6>Anabel Glover</h6>
+                        <p>Chief Executive Officer</p>
+                        <img src="images/twitter-logo.png">
+                    </div>
+                </div>
+
+                <div class="our-team-img-4">
+                    <div class="our-team-img-bottom">
+                        <h6>Walter Banks</h6>
+                        <p>Accountant</p>
+                        <img src="images/twitter-logo.png">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="our-clients-div">
+            <h3>Our Clients</h3>
+            <div class="our-clients-imgs-div">
+                <img src="images/belimo-logo.png" class="our-clients-imgs belimo-logo">
+                <img src="images/citrus-logo.png" class="our-clients-imgs citrus-logo">
+                <img src="images/grabyo-logo.png" class="our-clients-imgs grabyo-logo">
+                <img src="images/life-groups-logo.png" class="our-clients-imgs life-groups-logo">
+                <img src="images/myob-logo.png" class="our-clients-imgs myob-logo">
+                <img src="images/trustly-logo.png" class="our-clients-imgs trustly-logo">
+            </div>
+        </div>
+
+        <footer>© 2020 All Rights Reserved</footer>
     </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
     <section class="sections active" id="pricing-section">
