added pricing section

--- a/index.html
+++ b/index.html
@@ -151,13 +151,15 @@
 
         <div class="our-team">
             <h3>Our Team</h3>
-            
             <div class="our-team-container">
                 <div class="our-team-img-1">
                     <div class="our-team-img-bottom">
                         <h6>Joe Riley</h6>
                         <p>CTO</p>
                         <img src="images/twitter-logo.png">
+                        <img src="images/facebook-logo.png">
+                        <img src="images/linkedin-logo.png">
+                        <img src="images/google-logo.png">
                     </div>
                 </div>
 
@@ -166,6 +168,9 @@
                         <h6>Vanessa Hodson</h6>
                         <p>Product Manager</p>
                         <img src="images/twitter-logo.png">
+                        <img src="images/facebook-logo.png">
+                        <img src="images/linkedin-logo.png">
+                        <img src="images/google-logo.png">
                     </div>
                 </div>
 
@@ -174,6 +179,9 @@
                         <h6>Anabel Glover</h6>
                         <p>Chief Executive Officer</p>
                         <img src="images/twitter-logo.png">
+                        <img src="images/facebook-logo.png">
+                        <img src="images/linkedin-logo.png">
+                        <img src="images/google-logo.png">
                     </div>
                 </div>
 
@@ -182,6 +190,9 @@
                         <h6>Walter Banks</h6>
                         <p>Accountant</p>
                         <img src="images/twitter-logo.png">
+                        <img src="images/facebook-logo.png">
+                        <img src="images/linkedin-logo.png">
+                        <img src="images/google-logo.png">
                     </div>
                 </div>
             </div>
@@ -196,6 +207,54 @@
                 <img src="images/life-groups-logo.png" class="our-clients-imgs life-groups-logo">
                 <img src="images/myob-logo.png" class="our-clients-imgs myob-logo">
                 <img src="images/trustly-logo.png" class="our-clients-imgs trustly-logo">
+            </div>
+        </div>
+
+        <footer>© 2020 All Rights Reserved</footer>
+    </section>
+
+
+    <!--PRICING SECTION------------------------------>
+    <section class="sections" id="pricing-section">
+        <div class="pricing-div">
+            <h3>Pricing</h3>
+            <div class="pricing-grid">
+                <div class="pricing-grid-panel-1">
+                    <div>
+                        <h5>FREE PLAN</h5>
+                    </div>
+                    <p>Eos hac mirum-at-porta quod, ex mus nec non ex hac ad. Nunc nunc nesciunt gradum ut ita jlexibilis mus apollinis supremi conjuso. Massa illis nobis, mus illa diam meoruni o ante opponunt consilio populum.</p>
+                    <button type="button">CHOOSE PLAN</button>
+                </div>
+
+                <div class="pricing-grid-panel-2">
+                    <div>
+                        <h5>BASIC PLAN</h5>
+                        <span>$19</span>
+                    </div>
+                    <p>Rem probat usus in mus quia occidas pullus hic felices. Sem possim modo massa autem mus esse, ea hac sed vero esse sentiunt atticas occiditur vel iure. Esse arcu mixturam semper id ita utilitatem, tincidunt cxcusat, nam exaudire consilia curiosus.</p>
+                    <button type="button">CHOOSE PLAN</button>
+                </div>
+
+                <div class="pricing-grid-panel-3">
+                    <div>
+                        <h5>REGULAR PLAN</h5>
+                        <span>$29</span>
+                    </div>
+                    <p>Eos te dis ea necessitatem porta est ullo, mirum id orci diam dis ante et  indicat ossibus in leo quis imperia effectu nullam. Hum totam magni autem quo elit nec cursum eos apollinis populum, per nec'ti arcu crudele o erat gestarum bellicum. 
+                    </p>
+                    <button type="button">CHOOSE PLAN</button>
+                </div>
+
+                <div class="pricing-grid-panel-4">
+                    <div>
+                        <h5>PREMIUM PLAN</h5>
+                        <span>$39</span>
+                    </div>
+                    <p>Si mus'ea malitiam iure hic hic quae ab nullum exlusis id sonini me unde neglexi, ad hac vitae w quae quam. Nam'ti cras forlitudo vacare si utilitatem sem pectore, cum eos per per me consiliori duis est possimus spiritus urgebant.
+                    </p>
+                    <button type="button">CHOOSE PLAN</button>
+                </div>
             </div>
         </div>
 
@@ -226,20 +285,9 @@
 
 
 
+    
 
-
-
-
-    <section class="sections active" id="pricing-section">
-        <div>
-            <h1>hello</h1>
-        </div>
-        <div>
-            <h2>bye</h2>
-        </div>
-    </section>
-
-    <section class="sections active" id="contact-us-section">
+    <section class="sections" id="contact-us-section">
         <div>
             <h1>hello</h1>
         </div>
