added contact us section

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 
     <!--HOME SECTION--------------------------------->
-    <section class="sections active" id="home-section">
+    <section class="sections " id="home-section">
         <div class="main">
             <div class="main-left">
                 <h1>Immediate Solutions<br> for Your <span>Business!</span></h1>
@@ -262,42 +262,29 @@
     </section>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    
-
-    <section class="sections" id="contact-us-section">
-        <div>
-            <h1>hello</h1>
+    <!--CONTACT US SECTION---------------------------->
+    <section class="sections active" id="contact-us-section">
+        <h3>Contact Us</h3>
+        <div class="contact-us-div">
+            <p>Falli cras meritorum? Ea'ad eros te modi.
+            </p>
+            <p>Innatus eu se earum ac dui ante dolor quo persona ille semper idotia 2 esse.</p>
+            <p>3345 Prandium Mus</p>
+            <p>Superlativo, EA 75407</p>
+            <p>(912) 156-9891</p>
         </div>
-        <div>
-            <h2>bye</h2>
-        </div>
+
+        <form>
+            <input type="text" placeholder="Enter your first name">
+            <input type="email" placeholder="Enter your email address">
+            <textarea placeholder="Enter your message"></textarea>
+            <button type="button">SEND MESSAGE</button>
+        </form>
+
+        <footer>© 2020 All Rights Reserved</footer>
     </section>
 
 
-    <!--<div class="invisible-div"></div>-->
     <script src="app.js"></script>
 </body>
 </html>
