--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 
     <!--HOME SECTION--------------------------------->
-    <section class="sections " id="home-section">
+    <section class="sections active" id="home-section">
         <div class="main">
             <div class="main-left">
                 <h1>Immediate Solutions<br> for Your <span>Business!</span></h1>
@@ -263,7 +263,7 @@
 
 
     <!--CONTACT US SECTION---------------------------->
-    <section class="sections active" id="contact-us-section">
+    <section class="sections" id="contact-us-section">
         <h3>Contact Us</h3>
         <div class="contact-us-div">
             <p>Falli cras meritorum? Ea'ad eros te modi.
