added smartphone media queries

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <header>
         <img src="images/logo.png" class="logo">
+        <img src="images/logo-for-smartphones.png" class="logo-for-smartphones invisible-div">
         <nav>
             <ul>
                 <li><a href="#" data-id="home-section" class="nav-li active-nav-li">HOME</a></li>
@@ -17,6 +18,8 @@
                 <li><a href="#" data-id="contact-us-section" class="nav-li">CONTACT US</a></li>
             </ul>
         </nav>
+        <img src="images/open.png" class="invisible-div open">
+        <img src="images/close.png" class="invisible-div close"> 
     </header>
 
 
