added smartphones media queries

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="tablet-media-queries.css">
+    <link rel="stylesheet" href="tablets-media-queries.css">
     <link rel="stylesheet" href="smartphones-media-queries.css">
     <title>Immedibusi!!</title>
 </head>
