added smartphone navbar

--- a/index.html
+++ b/index.html
@@ -21,14 +21,16 @@
         <img src="images/logo-for-smartphones.png" class="logo-for-smartphones invisible-div">
         <nav>
             <ul>
-                <li><a href="#" data-id="home-section" class="nav-li active-nav-li">HOME</a></li>
-                <li><a href="#" data-id="about-us-section" class="nav-li">ABOUT US</a></li>
-                <li><a href="#" data-id="pricing-section" class="nav-li">PRICING</a></li>
-                <li><a href="#" data-id="contact-us-section" class="nav-li">CONTACT US</a></li>
+                <li><a href="#" data-id="home-section" class="nav-li active-nav-li" onclick="toggle()">HOME</a></li>
+
+                <li><a href="#" data-id="about-us-section" class="nav-li" onclick="toggle()">ABOUT US</a></li>
+
+                <li><a href="#" data-id="pricing-section" class="nav-li" onclick="toggle()">PRICING</a></li>
+
+                <li><a href="#" data-id="contact-us-section" class="nav-li" onclick="toggle()">CONTACT US</a></li>
             </ul>
         </nav>
-        <img src="images/open.png" class="invisible-div open">
-        <img src="images/close.png" class="invisible-div close"> 
+        <div class="toggle" onclick="toggle()"></div> 
     </header>
 
 
